# cpp_happy_fun_time

./: .gitignore  CMakeLists.txt  Intro.md  README.md  bookit.sh  cppForPythonistas.epub  forward.md  pdfs.sh  title.txt
cppcon-2016_leak_freedom/: DecoupledHasA.hpp  Pimpl.hpp  leak-freadom.md
mem/: Secret.cpp  Secret.hpp
session_01/: session01.md
session_02/: main.cpp  session02.md
session_03/: session03.md  session3.md
session_03/src/: Vector.hpp
session_03/tests/: CMakeLists.txt  test.cpp
session_04/: CMakeLists.txt  session04.md  session4.md
session_04/src/: CMakeLists.txt  Vector.cpp  Vector.hpp
session_04/tests/: test.cpp
session_05/: CMakeLists.txt  Person.cpp  PersonSharedPtr.hpp  SharedPtr.hpp  main.cpp  personSharedPtrMain.cpp  session05.md  sharedPtrMain.cpp  templatesEg.hpp
session_06/: Person.hpp  PersonBetter.cpp  PersonBetter.hpp  mainBetter.cpp  session06.md
session_07/: session07.md
session_08/: session08.md
session_09/: session09.md
session_10/: session10.md
session_11/: session11.md
session_12/: docopt_eg.py  parser_eg.py  session12.md
session_13/: session13.md
session_14/: session14.md  streams.cpp
session_15/: books.yaml  main.cpp  session15.md
session_16/: main.cpp  session16.md
session_17/: CMakeLists.txt  condvar.hpp  futurestart.hpp  main.cpp  nomutex.hpp  precondvar.hpp  session17.md  stdlock.hpp  uniquelock.hpp  withmutex.hpp
topics/: functional.cpp
topics/cpp11_random/: CMakeLists.txt  main.cpp
topics/cpp11_random/src/: CardDeck.cpp  CardDeck.hpp  rnd_distribution.hpp  rnd_engine.hpp
topics/cppcon-2016_leak_freedom/: DoublyLinkedList.hpp  DynamicArrayMember.hpp  HasA.hpp  SharingTree.hpp  Tree.hpp
topics/environ/: CMakeLists.txt  main.cpp
topics/environ/src/: utils.cpp  utils.hpp
topics/environ/test/: main.cpp  unit.cpp
topics/mem/: Secret.hpp  main.cpp
topics/modern_cpp/: moderncpp.md
topics/rvalue_references_move_semantics/: main.cpp  moveSemantics_eg2.cpp  move_constructor.hpp  session.md
topics/threading/: threading.cpp
